# k8s-project

./: README.md  book.md  pyproject.toml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
k8s/backend/: backend-deployment.yaml  backend-service.yaml
k8s/frontend/: frontend-deployment.yaml  frontend-service.yaml
k8s/postgres/: postgres-workload.yaml  postgresql-initial-data-configmap.yaml
src/templates/: index.html  login.html  nginx.conf  signup.html
src/web/: parser.py
tests/: test_parser.py
